# wildest-card

./: .gitignore  README.md  meson.build  test  test.c  wildcard.h
example/: example.c  meson.build
include/: meson.build  wildcard.h
test/: meson.build
